--- a/files/en-us/glossary/payload_header/index.html
+++ b/files/en-us/glossary/payload_header/index.html
@@ -17,18 +17,14 @@ tags:
 <h2 id="see_also">See also</h2>
 
 <ul>
-  <li><a href="/en-US/docs/Web/HTTP/Headers">List of all HTTP headers</a></li>
+  <li><a href="/en-US/docs/Web/HTTP/Headers">List of all HTTP headers</a>
+    <ul>
+      <li>{{HTTPHeader("Content-Length")}}</li>
+      <li>{{HTTPHeader("Content-Range")}}</li>
+      <li>{{HTTPHeader("Trailer")}}</li>
+      <li>{{HTTPHeader("Transfer-Encoding")}}</li>
+      <li>{{Glossary("Representation header")}}</li>
+    </ul>
+  </li>
   <li><a href="https://datatracker.ietf.org/doc/html/rfc7231#section-3.3">RFC 7231, section 3.3: Payload semantics</a></li>
 </ul>
-
-
-<div id="Quick_links">
-  <ul>
-    <li><a href="/en-US/docs/Web/HTTP/Headers">List of all HTTP headers</a></li>
-    <li>{{HTTPHeader("Content-Length")}}</li>
-    <li>{{HTTPHeader("Content-Range")}}</li>
-    <li>{{HTTPHeader("Trailer")}}</li>
-    <li>{{HTTPHeader("Transfer-Encoding")}}</li>
-    <li>{{Glossary("Representation header")}}</li>
-  </ul>
-</div>
